fixed touch events

--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,12 @@
         <div class="button paint_control" id="cmd_incsize"><i class="icon-plus-sign"></i></div>
         <br /><br />
         <div id="color-holder"></div>
-        <canvas id="sketchcanvas" autofocus></canvas>
+        <canvas id="sketchcanvas"></canvas>
       </div>
     </script>
 
     <script id="dialog-template" type="text/x-handlebars">
-        <textarea id="dialog-holder" autofocus></textarea>
+        <textarea class="animated fadeIn" id="dialog-holder" autofocus></textarea>
         <div class="button" id="cmd_finish_dialog"><i class="icon-ok-sign"></i></div>
     </script>
 
