fix create bug.

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
         <div class="animated fadeInUpBig" id="sketch-holder">
             <canvas id="sketchcanvas"></canvas>
             <div class="controls-container">
-                <div class="controls">
+                <div class="animated fadeInLeftBig controls">
                     <div class="button" id="cmd_finish_sketch"><i class="icon-ok-sign"></i></div>
                     <div class="button paint_control" id="cmd_undo"><i class="icon-undo"></i></div>
                     <div id="range-outer">
@@ -28,7 +28,7 @@
                     </div>
                 </div>
             </div>
-        <div id="color-holder"></div> 
+        <div class="animated fadeInRightBig" id="color-holder"></div> 
       </div>
     </script>
 
