--- a/public/index.html
+++ b/public/index.html
@@ -41,21 +41,34 @@
     <script id="help-template" type="text/x-handlebars">
         <div class="popup animated fadeInUpBig" id="help">      
             <div id="videos">
-                <video autoplay loop muted>
-                  <source src="/assets/videos/logicbot.webm" type="video/webm">
+                <video id="anchor" autoplay loop muted>
+                  <source src="/assets/videos/story1.webm" type="video/webm">
+                </video>
+                <video id="move" style="display: none;" autoplay loop muted>
+                  <source src="/assets/videos/story2.webm" type="video/webm">
+                </video>
+                <video id="rotate" style="display: none;" autoplay loop muted>
+                  <source src="/assets/videos/story3.webm" type="video/webm">
+                </video>
+                <video id="say" style="display: none;" autoplay loop muted>
+                  <source src="/assets/videos/story4.webm" type="video/webm">
+                </video>
+                <video id="timer" style="display: none;" autoplay loop muted>
+                  <source src="/assets/videos/story5.webm" type="video/webm">
+                </video>
+                <video id="touch" style="display: none;" autoplay loop muted>
+                  <source src="/assets/videos/story6.webm" type="video/webm">
                 </video>
             </div>
 
             <div id="button-icons">
-                <img class="active button-icon" src="/images/anchor.png">
-                <img class="button-icon" src="/images/move.png">
-                <img class="button-icon" src="/images/rotate.png">
-                <img class="button-icon" src="/images/timer.png">
-                <img class="button-icon" src="/images/say.png">
-                <img class="button-icon" src="/images/touch.png">
-                <img class="button-icon" src="/images/shake.png">
+                <img id="anchor" class="active button-icon" src="/images/anchor.png">
+                <img id="move" class="button-icon" src="/images/move.png">
+                <img id="rotate" class="button-icon" src="/images/rotate.png">
+                <img id="say" class="button-icon" src="/images/say.png">
+                <img id="timer" class="button-icon" src="/images/timer.png">
+                <img id="touch" class="button-icon" src="/images/touch.png">
             </div>
-
 
             <div class="menu">
                 <button id="help-close" class="close-button">
@@ -69,7 +82,6 @@
         <textarea class="animated fadeIn" id="dialog-holder" autofocus></textarea>
         <div class="button" id="cmd_finish_dialog"><i class="icon-ok-sign"></i></div>
     </script>
-
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
