font-awesome cdn, vars.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>Storybook</title>
     <link type="text/css" rel="stylesheet" href="style.css"/>
     <link rel="shortcut icon" href="http://www.gravatar.com/avatar/3b964d84fcfbcdf59089c8bd7309f0b7.ico" />
-    <link rel="stylesheet" href="/assets/font-awesome.css">
+    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/animate.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=.9, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
