non draggable buttons.

--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,12 @@
             </div>
 
             <div id="button-icons">
-                <img id="anchor" class="active button-icon" src="/images/anchor.png">
-                <img id="move" class="button-icon" src="/images/move.png">
-                <img id="rotate" class="button-icon" src="/images/rotate.png">
-                <img id="say" class="button-icon" src="/images/say.png">
-                <img id="timer" class="button-icon" src="/images/timer.png">
-                <img id="touch" class="button-icon" src="/images/touch.png">
+                <img draggable="false" id="anchor" class="active button-icon" src="/images/anchor.png">
+                <img draggable="false" id="move" class="button-icon" src="/images/move.png">
+                <img draggable="false" id="rotate" class="button-icon" src="/images/rotate.png">
+                <img draggable="false" id="say" class="button-icon" src="/images/say.png">
+                <img draggable="false" id="timer" class="button-icon" src="/images/timer.png">
+                <img draggable="false" id="touch" class="button-icon" src="/images/touch.png">
             </div>
 
             <div class="menu">
