Migrate to github pages.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Storybook</title>
-    <link type="text/css" rel="stylesheet" href="style.css"/>
+    <link type="text/css" rel="stylesheet" href="/assets/style.css"/>
     <link rel="shortcut icon" href="http://www.gravatar.com/avatar/3b964d84fcfbcdf59089c8bd7309f0b7.ico" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="/assets/animate.css">
@@ -20,7 +20,7 @@
           <i class="icon-play"></i>
         </button>
     </div>
-    
+
     <script id="sketch-template" type="text/x-handlebars">
         <div class="popup animated fadeInUpBig" id="sketch-holder">
             <canvas id="sketchcanvas"></canvas>
@@ -33,12 +33,12 @@
                     </div>
                 </div>
             </div>
-            <div class="animated fadeInLeftBig" id="color-holder"></div> 
+            <div class="animated fadeInLeftBig" id="color-holder"></div>
         </div>
     </script>
 
     <script id="help-template" type="text/x-handlebars">
-        <div class="popup animated fadeInUpBig" id="help">      
+        <div class="popup animated fadeInUpBig" id="help">
             <div id="videos">
                 <video id="anchor" autoplay loop muted>
                   <source src="/assets/videos/story1.webm" type="video/webm">
