Storybook uses relative paths.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <title>Storybook</title>
-    <link type="text/css" rel="stylesheet" href="/assets/style.css"/>
+    <link type="text/css" rel="stylesheet" href="assets/style.css"/>
     <link rel="shortcut icon" href="http://www.gravatar.com/avatar/3b964d84fcfbcdf59089c8bd7309f0b7.ico" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="/assets/animate.css">
+    <link rel="stylesheet" href="assets/animate.css">
     <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=.9, maximum-scale=1">
     <meta name="apple-mobile-web-app-capable" content="yes">
   </head>
@@ -41,32 +41,32 @@
         <div class="popup animated fadeInUpBig" id="help">
             <div id="videos">
                 <video id="anchor" autoplay loop muted>
-                  <source src="/assets/videos/story1.webm" type="video/webm">
+                  <source src="assets/videos/story1.webm" type="video/webm">
                 </video>
                 <video id="move" style="display: none;" autoplay loop muted>
-                  <source src="/assets/videos/story2.webm" type="video/webm">
+                  <source src="assets/videos/story2.webm" type="video/webm">
                 </video>
                 <video id="rotate" style="display: none;" autoplay loop muted>
-                  <source src="/assets/videos/story3.webm" type="video/webm">
+                  <source src="assets/videos/story3.webm" type="video/webm">
                 </video>
                 <video id="say" style="display: none;" autoplay loop muted>
-                  <source src="/assets/videos/story4.webm" type="video/webm">
+                  <source src="assets/videos/story4.webm" type="video/webm">
                 </video>
                 <video id="timer" style="display: none;" autoplay loop muted>
-                  <source src="/assets/videos/story5.webm" type="video/webm">
+                  <source src="assets/videos/story5.webm" type="video/webm">
                 </video>
                 <video id="touch" style="display: none;" autoplay loop muted>
-                  <source src="/assets/videos/story6.webm" type="video/webm">
+                  <source src="assets/videos/story6.webm" type="video/webm">
                 </video>
             </div>
 
             <div id="button-icons">
-                <img draggable="false" id="anchor" class="active button-icon" src="/images/anchor.png">
-                <img draggable="false" id="move" class="button-icon" src="/images/move.png">
-                <img draggable="false" id="rotate" class="button-icon" src="/images/rotate.png">
-                <img draggable="false" id="say" class="button-icon" src="/images/say.png">
-                <img draggable="false" id="timer" class="button-icon" src="/images/timer.png">
-                <img draggable="false" id="touch" class="button-icon" src="/images/touch.png">
+                <img draggable="false" id="anchor" class="active button-icon" src="assets/buttons/anchor.png">
+                <img draggable="false" id="move" class="button-icon" src="assets/buttons/move.png">
+                <img draggable="false" id="rotate" class="button-icon" src="assets/buttons/rotate.png">
+                <img draggable="false" id="say" class="button-icon" src="assets/buttons/say.png">
+                <img draggable="false" id="timer" class="button-icon" src="assets/buttons/timer.png">
+                <img draggable="false" id="touch" class="button-icon" src="assets/buttons/touch.png">
             </div>
 
             <div class="menu">
@@ -79,11 +79,11 @@
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.1.0/prototype.js"></script>
-    <script type="text/javascript" src="/assets/processing-touch-fixed.js"></script>
-    <script type="text/javascript" src="/app/view.js"></script>
-    <script type="text/javascript" src="/app/orientation.js"></script>
-    <script type="text/javascript" src="/app/sketch.js"></script>
-    <script type="text/javascript" src="/app/help.js"></script>
-    <script type="text/javascript" src="/app/config.js"></script>
+    <script type="text/javascript" src="assets/processing-touch-fixed.js"></script>
+    <script type="text/javascript" src="app/view.js"></script>
+    <script type="text/javascript" src="app/orientation.js"></script>
+    <script type="text/javascript" src="app/sketch.js"></script>
+    <script type="text/javascript" src="app/help.js"></script>
+    <script type="text/javascript" src="app/config.js"></script>
   </body>
 </html>
